--- a/vignettes/working-with-sql-data-bases.Rmd
+++ b/vignettes/working-with-sql-data-bases.Rmd
@@ -79,8 +79,9 @@ rm(flights) # remove the in-memory data set
 ## Create a DataBackend
 
 We reduce the data set to only keep a subset of features where the regression tree will have no problems:
-```{r}
-keep = c("row_id", "year", "month", "day", "hour", "minute", "dep_time", "arr_time", "carrier", "flight", "air_time", "distance", "arr_delay")
+```{r, tidy=TRUE}
+keep = c("row_id", "year", "month", "day", "hour", "minute", "dep_time",
+  "arr_time", "carrier", "flight", "air_time", "distance", "arr_delay")
 tbl = select(tbl, keep)
 colnames(tbl)
 ```
@@ -94,7 +95,10 @@ tbl = filter(tbl, row_id %% 2 == 0)
 ```
 Finally, we merge the factor levels of feature `carrier` so that infrequent carriers are replaced by level "other":
 ```{r}
-tbl = mutate(tbl, carrier = case_when(carrier %in% c("OO", "HA", "YV", "F9", "AS", "FL", "VX", "WN") ~ "other", TRUE ~ carrier))
+tbl = mutate(tbl, carrier = case_when(
+    carrier %in% c("OO", "HA", "YV", "F9", "AS", "FL", "VX", "WN") ~ "other",
+    TRUE ~ carrier)
+)
 ```
 
 This subsetted table is now used to create a `mlr3db::DataBackendDplyr`.
