--- a/vignettes/working-with-sql-data-bases.Rmd
+++ b/vignettes/working-with-sql-data-bases.Rmd
@@ -127,7 +127,7 @@ We create the following mlr3 objects:
 task = TaskRegr$new("flights_sqlite", b, target = "arr_delay")
 learner = mlr_learners$get("regr.rpart")
 resampling = mlr_resamplings$get("subsampling")
-resampling$param_vals = list(repeats = 3, ratio = 0.1)
+resampling$param_set$values = list(repeats = 3, ratio = 0.1)
 ```
 
 We pass all these objects to `mlr3::resample()` to perform a simple resampling with three iterations.
